
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.SignInActivity"
    android:background="@drawable/main_background_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Naslov (TextView) -->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/archivo"
                android:gravity="center"
                android:text="@string/register_string"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Ime (EditText) -->
            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/text_input_border_state_normal"
                android:fontFamily="@font/archivo"
                android:hint="@string/register_firstName"
                android:inputType="text"
                android:paddingStart="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <!-- Prezime (EditText) -->
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/text_input_border_state_normal"
                android:fontFamily="@font/archivo"
                android:hint="@string/register_lastName"
                android:inputType="text"
                android:paddingStart="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstName" />

            <!-- Email (EditText) -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/text_input_border_state_normal"
                android:fontFamily="@font/archivo"
                android:hint="@string/email_login"
                android:inputType="text"
                android:paddingStart="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastName" />

            <!-- Telefon (EditText) -->
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/text_input_border_state_normal"
                android:fontFamily="@font/archivo"
                android:hint="@string/phone_login"
                android:inputType="number|phone"
                android:paddingStart="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <!-- Lozinka (EditText) -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/text_input_border_state_normal"
                android:fontFamily="@font/archivo"
                android:hint="@string/password_login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number" />

            <!-- Ponovljena lozinka (EditText) -->
            <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/text_input_border_state_normal"
                android:fontFamily="@font/archivo"
                android:hint="@string/register_repeatPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <!-- Dugme za registraciju (Button) -->
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="60dp"
                android:background="@color/secondary"
                android:fontFamily="@font/archivo"
                android:text="Sign up"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeatPassword" />

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
