<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/main_background_layout"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="40"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/archivo"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="35sp"
            android:textStyle="bold"></TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="60"
        android:orientation="vertical" >


        <Button
            android:id="@+id/btn_proceed_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="60dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/archivo"
            android:text="Proceed to login"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="60"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/txtLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="goToSignUp"
            android:fontFamily="@font/archivo"
            android:text="@string/welcome_first_time_using_app"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/txtLinkSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="goToSignUp"
            android:fontFamily="@font/archivo"
            android:text="@string/welcome_sign_up_here"
            android:textStyle="bold"
            android:textColor="@color/accent_secondary"
            android:textSize="18sp">

        </TextView>


    </LinearLayout>
</LinearLayout>