<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.SignInActivity"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="40"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/welcome_sign_in_string"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="30sp"
            android:fontFamily="@font/archivo"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">
        </TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="60"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"

            android:background="@drawable/text_input_border_state_normal"
            android:hint="@string/email_login"
            android:fontFamily="@font/archivo"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:inputType="text"
            android:selectAllOnFocus="true"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"

            android:background="@drawable/text_input_border_state_normal"
            android:hint="@string/password_login"
            android:fontFamily="@font/archivo"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/black"
            android:inputType="text"
            android:paddingStart="16dp"
            android:selectAllOnFocus="true"
            />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="177dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/primary"
            android:fontFamily="@font/archivo"
            android:text="Log in"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>